# osnova

./: CMakeLists.txt  main.cpp  А.М.С. matlab  У.М.
TestTask/libs/DataPackage/: CMakeLists.txt
TestTask/libs/DataPackage/DataPackageCommon/: CMakeLists.txt  unittest.cmake
TestTask/libs/DataPackage/DataPackageCommon/include/DataPackageCommon/: CommonPackage.h  MsgPackage.h
TestTask/libs/DataPackage/DataPackageCommon/lib/: CommonPackage.cpp
TestTask/libs/DataPackage/DataPackageCommon/test/: WriteReadString.cpp  WriteReadString_test.cpp
TestTask/libs/DataPackage/DataPackageRead/: CMakeLists.txt  unittest.cmake
TestTask/libs/DataPackage/DataPackageRead/include/DataPackageRead/: ReadPackage.h
TestTask/libs/DataPackage/DataPackageRead/lib/: ReadPackage.cpp
TestTask/libs/DataPackage/DataPackageRead/test/: ReadDataPackage_test.cpp
TestTask/libs/DataPackage/DataPackageWrite/: CMakeLists.txt  unittest.cmake
TestTask/libs/DataPackage/DataPackageWrite/include/DataPackageWrite/: WritePackage.h
TestTask/libs/DataPackage/DataPackageWrite/lib/: WritePackage.cpp
TestTask/libs/DataPackage/DataPackageWrite/test/: WriteDataPackage_test.cpp
TestTask/libs/DataPackage/DataPackageWrite/test/config/: ReadDataPackage_test.cpp
TestTask/libs/DataPackage/include/DataPackage/: CommonData.h  ReadPackage.h  WritePackage.h
TestTask/libs/DataPackage/lib/: CommonData.cpp  ReadPackage.cpp  WritePackage.cpp
TestTask/libs/DataPackage/test/: DataPackageExeption_test.cpp  DataPackage_test.cpp  ReadDataPackage.cpp  ReadDataPackage_test.cpp  WriteDataPackage.cpp  WriteReadString.cpp
(+111 files in other folders)
